{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 15,
  "lineage": "c2277cd0-de56-6f92-fe60-7ecd878cf9f0",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/fit5225-cloudeco/global/networks/default",
            "name": "default",
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/northamerica-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-southeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/africa-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-north2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west10/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/asia-northeast2/subnetworks/default"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.129.108.113",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-30T01:11:24.686-07:00",
            "id": "projects/fit5225-cloudeco/regions/australia-southeast2/addresses/cloudeco-master-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cloudeco-master-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fit5225-cloudeco",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast2/addresses/cloudeco-master-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-master"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "worker1_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.129.183.218",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-30T01:11:18.183-07:00",
            "id": "projects/fit5225-cloudeco/regions/australia-southeast2/addresses/cloudeco-worker1-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cloudeco-worker1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fit5225-cloudeco",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast2/addresses/cloudeco-worker1-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-worker1"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "worker2_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.129.166.57",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-30T01:11:21.941-07:00",
            "id": "projects/fit5225-cloudeco/regions/australia-southeast2/addresses/cloudeco-worker2-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "cloudeco-worker2-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fit5225-cloudeco",
            "region": "australia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast2/addresses/cloudeco-worker2-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-worker2"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cloudeco_mel_allow_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8000",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-30T01:11:17.651-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-app",
            "log_config": [],
            "name": "cloudeco-mel-allow-app",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cloudeco-k8s"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.default",
            "data.google_project.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cloudeco_mel_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-04-30T01:11:17.894-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-internal",
            "log_config": [],
            "name": "cloudeco-mel-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cloudeco-k8s"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.default",
            "data.google_project.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cloudeco_mel_allow_k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-30T01:11:17.679-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-k8s-api",
            "log_config": [],
            "name": "cloudeco-mel-allow-k8s-api",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-k8s-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cloudeco-k8s"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.default",
            "data.google_project.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cloudeco_mel_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-30T01:11:17.623-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-ssh",
            "log_config": [],
            "name": "cloudeco-mel-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
            "priority": 1000,
            "project": "fit5225-cloudeco",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/firewalls/cloudeco-mel-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "cloudeco-k8s"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.default",
            "data.google_project.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260427",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-master",
            "instance_id": "1636947537210290260",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC7a28/J21T+F6xfmrLtFq4yBLsQ5dKgvPz2aKP4HQ03q6mVL+BIKa0jt+rwZO/ZHYuWKlL4eZNpZl4F4rpfiWiZ/iAIg6RU5Pfa8o9GeIQLypSHO7FqStYjNiW6f/z582ynhanM+YqbzUN+59PPM02wgaAFuxxj84RjwQ+WkOCzP4P+7t94+Nx/F6sMrgByUMvCvBgd8zGloKDpFZtyG6URFfw+CcDGNCkb77RpvDuNzcQAJdez6jKlMhPjJsyLFlbVSlhKSxJ3JS44yG3DsDpf9U53lqRFtsufZiyrwCMByxZqSVSdzoPOGzsHxeeYPj9hPXWyMnf7j1IT4WAo5ibDyH2x5wL6FLPxBwgxJqBnE1rwVCSXpi0DPI7k+GBkNz5TRaYIfOJ7SgnIiVd8UkcjlVjXFNauaaOn2Yea841aO [...]
            },
            "metadata_fingerprint": "dxTQA6K1LuA=",
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.129.108.113",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
                "network_ip": "10.192.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast2/subnetworks/default",
                "subnetwork_project": "fit5225-cloudeco"
              }
            ],
            "project": "fit5225-cloudeco",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloudeco-k8s"
            ],
            "tags_fingerprint": "Eu5I9CY19Xw=",
            "zone": "australia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu_2204",
            "data.google_compute_network.default",
            "data.google_project.current",
            "google_compute_address.master_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260427",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/disks/k8s-worker1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-worker1",
            "instance_id": "7934398512691589212",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC7a28/J21T+F6xfmrLtFq4yBLsQ5dKgvPz2aKP4HQ03q6mVL+BIKa0jt+rwZO/ZHYuWKlL4eZNpZl4F4rpfiWiZ/iAIg6RU5Pfa8o9GeIQLypSHO7FqStYjNiW6f/z582ynhanM+YqbzUN+59PPM02wgaAFuxxj84RjwQ+WkOCzP4P+7t94+Nx/F6sMrgByUMvCvBgd8zGloKDpFZtyG6URFfw+CcDGNCkb77RpvDuNzcQAJdez6jKlMhPjJsyLFlbVSlhKSxJ3JS44yG3DsDpf9U53lqRFtsufZiyrwCMByxZqSVSdzoPOGzsHxeeYPj9hPXWyMnf7j1IT4WAo5ibDyH2x5wL6FLPxBwgxJqBnE1rwVCSXpi0DPI7k+GBkNz5TRaYIfOJ7SgnIiVd8UkcjlVjXFNauaaOn2Yea841aO [...]
            },
            "metadata_fingerprint": "dxTQA6K1LuA=",
            "name": "k8s-worker1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.129.183.218",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
                "network_ip": "10.192.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast2/subnetworks/default",
                "subnetwork_project": "fit5225-cloudeco"
              }
            ],
            "project": "fit5225-cloudeco",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-worker1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloudeco-k8s"
            ],
            "tags_fingerprint": "Eu5I9CY19Xw=",
            "zone": "australia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu_2204",
            "data.google_compute_network.default",
            "data.google_project.current",
            "google_compute_address.worker1_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260427",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/disks/k8s-worker2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-worker2",
            "instance_id": "6326778462658801750",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC7a28/J21T+F6xfmrLtFq4yBLsQ5dKgvPz2aKP4HQ03q6mVL+BIKa0jt+rwZO/ZHYuWKlL4eZNpZl4F4rpfiWiZ/iAIg6RU5Pfa8o9GeIQLypSHO7FqStYjNiW6f/z582ynhanM+YqbzUN+59PPM02wgaAFuxxj84RjwQ+WkOCzP4P+7t94+Nx/F6sMrgByUMvCvBgd8zGloKDpFZtyG6URFfw+CcDGNCkb77RpvDuNzcQAJdez6jKlMhPjJsyLFlbVSlhKSxJ3JS44yG3DsDpf9U53lqRFtsufZiyrwCMByxZqSVSdzoPOGzsHxeeYPj9hPXWyMnf7j1IT4WAo5ibDyH2x5wL6FLPxBwgxJqBnE1rwVCSXpi0DPI7k+GBkNz5TRaYIfOJ7SgnIiVd8UkcjlVjXFNauaaOn2Yea841aO [...]
            },
            "metadata_fingerprint": "dxTQA6K1LuA=",
            "name": "k8s-worker2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.129.166.57",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/global/networks/default",
                "network_ip": "10.192.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/regions/australia-southeast2/subnetworks/default",
                "subnetwork_project": "fit5225-cloudeco"
              }
            ],
            "project": "fit5225-cloudeco",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fit5225-cloudeco/zones/australia-southeast2-a/instances/k8s-worker2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "cloudeco-k8s"
            ],
            "tags_fingerprint": "Eu5I9CY19Xw=",
            "zone": "australia-southeast2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu_2204",
            "data.google_compute_network.default",
            "data.google_project.current",
            "google_compute_address.worker2_ip"
          ]
        }
      ]
    }
  ]
}